[gd_scene load_steps=5 format=2]

[ext_resource path="res://MGF Scene/Season/LeagueOld.gd" type="Script" id=1]
[ext_resource path="res://MGF Scene/Season/Match.tscn" type="PackedScene" id=4]
[ext_resource path="res://MGF Scene/Season/TeamIndex.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets2D/Theme/btnBlackOp.tres" type="StyleBox" id=7]

[node name="League" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TeamIndex" parent="." instance=ExtResource( 5 )]
anchor_left = 0.075
anchor_top = 0.0222222
anchor_right = 0.625
anchor_bottom = 0.0888889
custom_styles/panel = ExtResource( 7 )

[node name="VScrollBarBXH" type="ScrollContainer" parent="."]
anchor_left = 0.075
anchor_top = 0.1
anchor_right = 0.625
anchor_bottom = 0.977778
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="VScrollBarBXH"]

[node name="TeamIndex2" parent="VScrollBarBXH/VBoxContainer" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 704.0
offset_bottom = 48.0

[node name="VScrollBar" type="ScrollContainer" parent="."]
anchor_left = 0.65
anchor_top = 0.0222222
anchor_right = 0.925
anchor_bottom = 0.955556
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="VScrollBar"]

[node name="Match" parent="VScrollBar/VBoxContainer" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 320.0
offset_bottom = 64.0
